Geolocalización: class y JS

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-	<div id="map"></div>
+	<div class="map"></div>
 	<button id="get-location" type="button" class="btn btn-primary btn-large">Obtener ubicación</button>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1UbkmPre2ECot7c0dShh8_37plim_PiQ"></script>
 	<script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
